--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css"
     />
     <style>
-      .sucess,
+      .success,
       .error {
         color: #fff;
         padding: 0.25em;
         margin: 0.25em 0 1em 0;
       }
 
-      .succes {
+      .success {
         background: green;
       }
 
